# ESP32-Project

./: README.md
UEDX24240013-MD50E/: README.md
UEDX24320024E-WB-A(2.4inch)/examples/ESP-IDF SDK/UEDX240320E-WB-A-IDF-SDK/main/: CMakeLists.txt  example_qspi_with_ram.c  idf_component.yml
UEDX46460015-MD50E(1.5inch Knob)/examples/ESP-IDF SDK/UEDX46460015-MD50E-IDF-SDK/main/: CMakeLists.txt  HF_encoder_butto.h  example_qspi_with_ram.c  idf_component.yml  ui.h  ui_Screen1.c  ui_helpers.h  ui_img_1307502690.c  ui_img_1594878714.c  ui_img_1611000061.c  ui_img_2kaoji_png.c  ui_img_3danta_png.c  ui_img_6shutiao_png.c  ui_working.c
UEDX46460015-MD50E/examples/ESP-IDF SDK/UEDX46460015-MD50E-IDF-SDK/: sdkconfig
UEDX46460015-MD50E/examples/ESP-IDF SDK/UEDX46460015-MD50E-IDF-SDK/main/: HF_encoder_butto.c  ui.c  ui_helpers.c  ui_img_1609717271.c  ui_img_1kaorou_png.c  ui_img_2062528660.c  ui_img_4pisa_png.c  ui_img_5liupai_png.c  ui_img_756072277.c  ui_img_back111_png.c  ui_time.c
UEDX80480070E-WB-A(7.0inch)/examples/Arduino SDK/Libraries/ESP32_Display_Panel/src/board/viewe/: ESP_viewe_panel_4848040.h
