idf_component_register(
    SRCS "example_qspi_with_ram.c"
     "HF_encoder_butto.c"


    "ui_helpers.c"
    "ui_img_1kaorou_png.c"
    "ui_img_2kaoji_png.c"
    "ui_img_3danta_png.c"
    "ui_img_4pisa_png.c"
    "ui_img_5liupai_png.c"
    "ui_img_6shutiao_png.c"
    
    "ui_img_756072277.c"
    "ui_img_1307502690.c"
    "ui_img_1594878714.c"
    "ui_img_1609717271.c"
    "ui_img_1611000061.c"
    "ui_img_2062528660.c"
   
    "ui_img_back111_png.c"
    
    "ui_Screen1.c"
    "ui_time.c"
    "ui_working.c"
    "ui.c"
    INCLUDE_DIRS ".")
